[package]
name = "firebase_jwt_rs"
version = "0.1.0"
edition = "2021"
description = "Firebase utils for JWT client token decoding"
readme = "README.md"
repository = "https://github.com/antonybudianto/firebase-rs"
license = "MIT"
authors = ["Antony Budianto <antonybudianto@gmail.com>"]
keywords = ["firebase", "jwt", "api", "decoding"]

[dependencies]
jsonwebtoken = "8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["json"] }
